--- a/.github/workflows/trgoalm.yml
+++ b/.github/workflows/trgoalm.yml
@@ -1,12 +1,12 @@
 name: TRgoalm M3U Oluşturucu
 
 permissions:
-  contents: write  # Push izni çok önemli!
+  contents: write
 
 on:
   schedule:
     - cron: '0 * * * *'   # Her saat başı çalışır
-  workflow_dispatch:       # Manuel çalıştırma
+  workflow_dispatch:      # Manuel tetikleme için
 
 jobs:
   update-inat-m3u:
@@ -15,13 +15,15 @@ jobs:
     steps:
       - name: Repo Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Git geçmişini tam çek (rebase hatasını önler)
 
       - name: Python Kur
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Gerekli Python paketlerini yükle
+      - name: Paketleri Yükle
         run: |
           python -m pip install --upgrade pip
           python -m pip install requests beautifulsoup4
@@ -31,21 +33,20 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: TRgoal M3U oluştur (trgoalm.py)
+      - name: M3U Oluştur
         run: python trgoalm.py
 
-      - name: Değişiklikleri Commit et
-        run: |
-          git add karsilasmalar2.m3u
-          git commit -m "Auto-update karsilasmalar2.m3u" || echo "No changes to commit"
-
-      - name: Uzaktaki değişiklikleri çek
-        run: |
-          git fetch origin main
-          git rebase origin/main || git rebase --abort
-
-      - name: Değişiklikleri Pushla
+      - name: Değişiklikleri Kaydet ve Pushla
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # Uzaktaki değişikliklerle çakışmayı önlemek için akıllı birleştirme
+          git add karsilasmalar2.m3u
+          git stash # Yeni oluşturulan dosyayı geçici olarak sakla
+          git pull --rebase origin main # GitHub'daki güncel hali çek
+          git stash pop || echo "Çakışma yok" # Dosyayı geri getir
+          
+          # Kaydet ve gönder
+          git add karsilasmalar2.m3u
+          git commit -m "Auto-update: karsilasmalar2.m3u $(date)" || echo "Değişiklik yok"
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} main
