--- a/.github/workflows/hdch.yml
+++ b/.github/workflows/hdch.yml
@@ -3,46 +3,48 @@ name: HDFilmCehennemi Scraper
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 2 * * *'   # Her gün 02:00
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
 
     steps:
+      # Repo çek
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0   # <<< EN ÖNEMLİ SATIR
+          fetch-depth: 0
 
+      # Python kur
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
+      # Pip güncelle + bağımlılıkları kur
       - name: Install Dependencies
         run: |
-          pip install urllib3 html5lib
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
+      # Script çalıştır
       - name: Run HDCH Scraper
-        run: python hdch.py
+        run: |
+          python hdch.py 10 0.3
 
+      # Commit & push
       - name: Commit and Push Results
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add *.json
+          git add *.json *.html || true
 
           if git diff --cached --quiet; then
             echo "No changes to commit"
           else
             git commit -m "Auto-update: Scraped data $(date +'%Y-%m-%d %H:%M:%S')"
-            
-            # Remote değişiklikleri al
             git pull --rebase origin main
-
-            # Push
             git push origin main
           fi
