--- a/.github/workflows/catcastv.yml
+++ b/.github/workflows/catcastv.yml
@@ -22,7 +22,7 @@ jobs:
       run: pip install requests
       
     - name: Generate M3U playlist
-      run: python generate_playlist.py
+      run: python catvas.py
       
     - name: Commit and push if changed
       run: |
